{{$NEXT}}

0.1       2015-01-01 09:37:16 Europe/Rome
   - release after 71 passes on CPAN Testers (thanks!)

0.1_02    2014-12-31 14:09:57 Europe/Rome
   - workaround for perl bug in open() prior to version 5.14
   - added name() method to Data::Embed::File
   - added script for embedding/listing/extracting from container files

0.1_01    2014-12-30 17:47:32 Europe/Rome
   - developer release to see what CPAN Testers say