@@ -1,4 +1,6 @@
 {{$NEXT}}
+   - added package for embedding one file in a Perl module
+   - added sub-command in data-embed for feature above
 
 0.1       2015-01-01 09:37:16 Europe/Rome
    - release after 71 passes on CPAN Testers (thanks!)
